[package]
name = "pslr"
description = "Command-line tool for Public Suffix List interactions."
version = "1.0.0"
edition = "2024"
authors = ["Ryan Chandler <support@ryangjchandler.co.uk>"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
publicsuffix = "2.3.0"
