[package]
name = "pslr"
description = "Command-line tool for Public Suffix List interactions."
version = "1.0.2"
edition = "2024"
authors = ["Ryan Chandler <support@ryangjchandler.co.uk>"]
license = "MIT"
repository = "https://github.com/ryangjchandler/pslr"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
publicsuffix = "2.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
